--- a/commerce/auctions/templates/auctions/create-announce.html
+++ b/commerce/auctions/templates/auctions/create-announce.html
@@ -11,17 +11,9 @@
     <h1>Create Announce</h1>
 
     <form action="{% url 'create_announce' %}" method="post">
-
         {% csrf_token %}
-
-        <input type="text" name="title" placeholder="Title">
-        <input type="text" name="description" placeholder="Description">
-        <input type="number" name="bid" placeholder="Initial Bid">
-        <input type="text" name="image" placeholder="Image URL">
-        <input type="text" name="category" placeholder="Type a Category">
-
-        <input type="submit" value="Create Announce">
-
+        {{ form }}
+        <input type="submit" value="Create Listing">
     </form>
 
 {% endblock %}
