--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -21,10 +21,16 @@
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
             </li>
 
-            <li>
-                <a class="nav-link" href="{% url 'create_announce' %}">Create Listing</a>
-            </li>
+
             {% if user.is_authenticated %}
+                <li>
+                <a class="nav-link" href="{% url 'create_announce' %}">Create Listing</a>
+                </li>
+
+                <li>
+                <a class="nav-link" href="{% url 'get_watchlist' %}">Watch List</a>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                 </li>
