--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -5,7 +5,7 @@
     <ul>
         {% for listing in listings_active %}
             <li>
-                <a href="{% url 'get_announce' listing.id %}">
+                <a href="{% url 'get_listing_active' listing.id %}">
                     <h3>Title: {{ listing.title }}</h3>
                 </a>
             </li>
