--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -10,8 +10,8 @@
     <body>
         <h1>Auctions</h1>
         <div>
-            {% if user.is_authenticated %}
-                Signed in as <strong>{{ user.username }}</strong>.
+            {% if request.user.is_authenticated %}
+                Signed in as <strong>{{ request.user.username }}</strong>.
             {% else %}
                 Not signed in.
             {% endif %}
@@ -22,13 +22,17 @@
             </li>
 
 
-            {% if user.is_authenticated %}
+            {% if request.user.is_authenticated %}
                 <li>
                 <a class="nav-link" href="{% url 'create_announce' %}">Create Listing</a>
                 </li>
 
                 <li>
                 <a class="nav-link" href="{% url 'get_watchlist' %}">Watch List</a>
+                </li>
+
+                <li>
+                <a class="nav-link" href="{% url 'get_user' request.user.id %}">Perfil</a>
                 </li>
 
                 <li class="nav-item">
