--- a/commerce/auctions/templates/auctions/user-page.html
+++ b/commerce/auctions/templates/auctions/user-page.html
@@ -12,14 +12,45 @@
         </div>
     {% endif %}
 
-    <h2>{{ listing.username }}</h2>
+    <h2>{{ user.username }}</h2>
     <ul>
-        <li>Full name: {{ listing.first }} {{ listing.last }}</li>
-        <li>Email: {{ listing.email }}</li>
-        {% for listing in listings_won %}
+        <li>Full name: {{ user.first_name }} {{ user.last_name }}</li>
+        <li>Email: {{ user.email }}</li>
 
-        {% endfor %}
+        {% if request.user != user %}
+            <h3>Listings created: {{ listings_created.count|default:0 }}</h3>
+            <h3>Listings won: {{ listings_won.count|default:0 }}</h3>
 
+        {% else %}
+
+        <h3>Listings created</h3>
+            <ul>
+            {% if listings_created %}
+                {% for listing in listings_created %}
+                    <li>
+                        <a href="{% url 'get_listing' listing.id %}">{{ listing }}</a>
+                    </li>
+                {% endfor %}
+            {% else %}
+            <li>No listings created</li>
+            {% endif %}
+
+            </ul>
+
+        <h3>Listings won</h3>
+            <ul>
+            {% if listings_won %}
+                {% for listing_won in listings_won %}
+                    <li>
+                        <a href="{% url 'get_listing_inactive' listing_won.id %}">{{ listing_won }}</a>
+                    </li>
+                {% endfor %}
+            {% else %}
+            <li>No listings won</li>
+            {% endif %}
+
+            </ul>
+        {% endif %}
     </ul>
 
 {% endblock %}
